--- a/CRUD OPERATION/springcrud/src/main/resources/application.properties
+++ b/CRUD OPERATION/springcrud/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_system?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Vicky@123
+spring.datasource.password={password}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
